--- a/BimWebServer/.classpath
+++ b/BimWebServer/.classpath
@@ -12,26 +12,27 @@
 	<classpathentry exported="true" kind="lib" path="lib/jetty/jsp/org.apache.taglibs.standard.glassfish_1.2.0.v201004190952.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jetty/servlet-api-2.5.jar"/>
 	<classpathentry kind="src" path="expander"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-ajp-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-annotations-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-client-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-continuation-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-deploy-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-http-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-io-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-jmx-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-jndi-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-overlay-deployer-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-plus-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-policy-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-rewrite-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-security-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-server-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-servlet-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-servlets-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-util-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-webapp-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-websocket-7.4.3.v20110701.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jetty/jetty-xml-7.4.3.v20110701.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-ajp-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-annotations-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-client-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-continuation-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-deploy-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-http-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-io-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-jmx-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-jndi-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-overlay-deployer-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-plus-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-policy-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-rewrite-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-security-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-server-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-servlet-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-servlets-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-util-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-webapp-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-websocket-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jetty-xml-7.5.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jetty/jsp/jetty-jsp-2.1-7.5.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
