Updated to the latest svn HEAD, Precalculating the geometric object bounds

--- a/Tests/.classpath
+++ b/Tests/.classpath
@@ -69,5 +69,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/Plugins"/>
 	<classpathentry kind="lib" path="/BimServer/lib/junit-4.8.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/IfcPlugins"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/BimServerClientLib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
