--- a/Tests/.classpath
+++ b/Tests/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="/BimServer/lib/cxf/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="/BimServer/lib/cxf/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="/BimServer/lib/cxf/asm-3.3.jar"/>
@@ -70,5 +69,6 @@
 	<classpathentry kind="lib" path="/BimServer/lib/junit-4.8.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/IfcPlugins"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/BimServerClientLib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/BimWebServer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
